--- a/package.json
+++ b/package.json
@@ -2,14 +2,40 @@
   "name": "penpot-plugins",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "npx nx run plugins-runtime:serve",
+    "build": "npx nx build plugins-runtime --emptyOutDir=true"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "@nx/js": "17.2.8",
-    "nx": "17.2.8"
+    "@nx/eslint": "17.2.8",
+    "@nx/eslint-plugin": "17.2.8",
+    "@nx/js": "17.3.0",
+    "@nx/vite": "17.2.8",
+    "@nx/web": "^17.3.0",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@types/node": "20.11.16",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "@vitest/coverage-v8": "~0.34.6",
+    "@vitest/ui": "~0.34.6",
+    "eslint": "~8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jsdom": "~22.1.0",
+    "nx": "17.2.8",
+    "prettier": "^2.6.2",
+    "swc-loader": "0.1.15",
+    "typescript": "~5.2.2",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "~2.3.0",
+    "vitest": "~0.34.6"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "tslib": "^2.3.0"
+  }
 }
