--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "license": "MIT",
   "scripts": {
     "start": "npx nx run plugins-runtime:serve",
-    "build": "npx nx build plugins-runtime --emptyOutDir=true"
+    "build": "npx nx build plugins-runtime --emptyOutDir=true",
+    "lint": "nx run-many --all --target=lint --parallel",
+    "lint:affected": "npx nx affected --target=lint",
+    "prepare": "husky"
   },
   "private": true,
   "devDependencies": {
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
     "@nx/js": "17.3.0",
@@ -23,6 +28,7 @@
     "@vitest/ui": "~0.34.6",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "husky": "^9.0.10",
     "jsdom": "~22.1.0",
     "nx": "17.2.8",
     "prettier": "^2.6.2",
