--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "npx nx run plugins-runtime:serve",
+    "start": "npx nx run plugins-runtime:serve-static",
     "build": "npx nx build plugins-runtime --emptyOutDir=true",
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
@@ -13,30 +13,30 @@
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
-    "@nx/eslint": "17.2.8",
-    "@nx/eslint-plugin": "17.2.8",
-    "@nx/js": "17.3.0",
-    "@nx/vite": "17.2.8",
-    "@nx/web": "^17.3.0",
+    "@nx/eslint": "18.0.2",
+    "@nx/eslint-plugin": "18.0.2",
+    "@nx/js": "18.0.2",
+    "@nx/vite": "18.0.2",
+    "@nx/web": "18.0.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@types/node": "20.11.16",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitest/coverage-v8": "~0.34.6",
-    "@vitest/ui": "~0.34.6",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "@vitest/coverage-v8": "1.2.2",
+    "@vitest/ui": "1.2.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^9.0.10",
     "jsdom": "~22.1.0",
-    "nx": "17.2.8",
+    "nx": "18.0.2",
     "prettier": "^2.6.2",
     "swc-loader": "0.1.15",
     "typescript": "~5.2.2",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~2.3.0",
-    "vitest": "~0.34.6"
+    "vitest": "1.2.2"
   },
   "workspaces": [
     "packages/*"
@@ -45,3 +45,4 @@
     "tslib": "^2.3.0"
   }
 }
+
