--- a/plugins-runtime/project.json
+++ b/plugins-runtime/project.json
@@ -3,32 +3,6 @@
   "$schema": "../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "plugins-runtime/src",
   "projectType": "library",
-  "targets": {
-    "build": {
-      "executor": "@nx/vite:build",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist/plugins-runtime"
-      }
-    },
-    "test": {
-      "executor": "@nx/vite:test",
-      "outputs": ["{options.reportsDirectory}"],
-      "options": {
-        "reportsDirectory": "../coverage/plugins-runtime"
-      }
-    },
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
-    },
-    "serve": {
-      "executor": "@nx/web:file-server",
-      "options": {
-        "buildTarget": "build",
-        "staticFilePath": "dist/plugins-runtime"
-      }
-    }
-  },
+  "targets": {},
   "tags": []
 }
