--- a/libs/plugins-runtime/package.json
+++ b/libs/plugins-runtime/package.json
@@ -1,7 +1,10 @@
 {
   "name": "plugins-runtime",
   "version": "0.0.1",
-  "dependencies": {},
+  "dependencies": {
+    "ses": "^1.1.0",
+    "zod": "^3.22.4"
+  },
   "module": "./index.mjs",
   "typings": "./index.d.ts"
 }
