--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "plugins-runtime": ["libs/plugins-runtime/src/index.ts"],
-      "plugins-styles": ["libs/plugins-styles/src/index.ts"]
+      "plugins-styles/*": ["libs/plugins-styles/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
