--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "npx nx run plugins-runtime:serve-static --port 4200",
     "start:example": "npx nx run example-plugin:serve-static --port 4201",
+    "start:rpc-api": "npx nx serve rpc-api",
     "build": "npx nx build plugins-runtime --emptyOutDir=true",
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
@@ -14,26 +15,36 @@
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
+    "@fastify/cors": "^9.0.1",
+    "@nx/esbuild": "18.0.2",
     "@nx/eslint": "18.0.2",
     "@nx/eslint-plugin": "18.0.2",
+    "@nx/jest": "18.0.2",
     "@nx/js": "18.0.2",
+    "@nx/node": "^18.0.2",
     "@nx/vite": "18.0.2",
     "@nx/web": "18.0.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@types/jest": "^29.4.0",
     "@types/node": "20.11.16",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "@vitest/coverage-v8": "1.2.2",
     "@vitest/ui": "1.2.2",
+    "esbuild": "^0.19.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^9.0.10",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "18.0.2",
     "prettier": "^2.6.2",
     "swc-loader": "0.1.15",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.2.2",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~2.3.0",
@@ -43,6 +54,11 @@
     "packages/*"
   ],
   "dependencies": {
+    "@fastify/autoload": "~5.7.1",
+    "@fastify/sensible": "~5.2.0",
+    "axios": "^1.6.0",
+    "fastify": "~4.13.0",
+    "fastify-plugin": "~4.5.0",
     "ses": "^1.1.0",
     "tslib": "^2.3.0",
     "zod": "^3.22.4"
