--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "npx nx run plugins-runtime:serve-static --port 4200",
     "start:example": "npx nx run example-plugin:serve-static --port 4201",
     "start:rpc-api": "npx nx serve rpc-api",
+    "start:styles-example": "npx nx run example-styles:serve --port 4202",
     "build": "npx nx build plugins-runtime --emptyOutDir=true",
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
