--- a/apps/example-plugin/tsconfig.app.json
+++ b/apps/example-plugin/tsconfig.app.json
@@ -5,5 +5,5 @@
     "types": ["node"]
   },
   "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "../../libs/plugins-runtime/src/lib/index.d.ts"]
 }
