--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "fastify-plugin": "~4.5.0",
     "ses": "^1.1.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
 }
