--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "plugins-data-parser": ["libs/plugins-data-parser/src/index.ts"],
+      "plugins-parser": ["libs/plugins-parser/src/index.ts"],
       "plugins-runtime": ["libs/plugins-runtime/src/index.ts"],
       "plugins-styles/*": ["libs/plugins-styles/src/*"]
     }
