--- a/libs/plugins-data-parser/project.json
+++ b/libs/plugins-data-parser/project.json
@@ -3,17 +3,6 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/plugins-data-parser/src",
   "projectType": "library",
-  "targets": {
-    "build": {
-      "executor": "@nx/js:tsc",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist/libs/plugins-data-parser",
-        "main": "libs/plugins-data-parser/src/index.ts",
-        "tsConfig": "libs/plugins-data-parser/tsconfig.lib.json",
-        "assets": ["libs/plugins-data-parser/*.md"]
-      }
-    }
-  },
+  "targets": {},
   "tags": []
 }
