feat: basic permission system

--- a/apps/example-plugin/public/manifest.json
+++ b/apps/example-plugin/public/manifest.json
@@ -1,4 +1,9 @@
 {
   "name": "Example plugin",
-  "code": "http://localhost:4201/plugin.js"
+  "code": "http://localhost:4201/plugin.js",
+  "permissions": [
+    "page:read",
+    "file:read",
+    "selection:read"
+  ]
 }
