--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "npx nx build plugins-runtime --emptyOutDir=true",
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
+    "test": "npx nx test plugins-runtime",
     "prepare": "husky"
   },
   "private": true,
@@ -20,7 +21,6 @@
     "@nx/esbuild": "18.0.2",
     "@nx/eslint": "18.0.2",
     "@nx/eslint-plugin": "18.0.2",
-    "@nx/jest": "18.0.2",
     "@nx/js": "18.0.2",
     "@nx/node": "^18.0.2",
     "@nx/vite": "18.0.2",
@@ -28,7 +28,6 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
-    "@types/jest": "^29.4.0",
     "@types/node": "20.11.16",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
@@ -37,14 +36,12 @@
     "esbuild": "^0.19.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "happy-dom": "^13.6.2",
     "husky": "^9.0.10",
-    "jest": "^29.4.1",
-    "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "18.0.2",
     "prettier": "^2.6.2",
     "swc-loader": "0.1.15",
-    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
     "vite": "^5.0.0",
