feat: module boundaries

--- a/apps/example-styles/project.json
+++ b/apps/example-styles/project.json
@@ -3,6 +3,6 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/example-styles/src",
-  "tags": [],
+  "tags": ["type:app"],
   "targets": {}
 }
