--- a/apps/example-plugin/project.json
+++ b/apps/example-plugin/project.json
@@ -3,6 +3,6 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/example-plugin/src",
-  "tags": [],
+  "tags": ["type:plugin"],
   "targets": {}
 }
