--- a/libs/plugins-data-parser/project.json
+++ b/libs/plugins-data-parser/project.json
@@ -4,5 +4,5 @@
   "sourceRoot": "libs/plugins-data-parser/src",
   "projectType": "library",
   "targets": {},
-  "tags": []
+  "tags": ["type:util"]
 }
