--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@swc/helpers": "~0.5.2",
     "@types/node": "20.11.16",
     "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-v8": "1.2.2",
     "@vitest/ui": "1.2.2",
     "esbuild": "^0.19.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-deprecation": "^2.0.0",
     "happy-dom": "^13.6.2",
     "husky": "^9.0.10",
     "jsdom": "~22.1.0",
@@ -54,6 +55,7 @@
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
     "@fastify/sensible": "~5.2.0",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
