--- a/libs/plugins-runtime/package.json
+++ b/libs/plugins-runtime/package.json
@@ -1,11 +1,12 @@
 {
   "name": "plugins-runtime",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "devDependencies": {
     "happy-dom": "^13.6.2"
   },
   "dependencies": {
-    "plugins-data-parser": "^0.0.1",
+    "@penpot/plugin-types": "^0.1.0",
+    "plugins-data-parser": "^0.1.0",
     "vitest": "1.2.2",
     "ses": "^1.1.0",
     "zod": "^3.22.4"
