--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "penpot-plugins",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "start": "npx nx run plugins-runtime:build --watch & npx nx run plugins-runtime:preview",
@@ -11,6 +11,8 @@
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
     "test": "npx nx test plugins-runtime",
+    "publish": "nx run-many -t publish -p plugins-styles plugin-types --parallel=false --",
+    "registry": "nx local-registry",
     "prepare": "husky"
   },
   "private": true,
@@ -37,6 +39,7 @@
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-deprecation": "^2.0.0",
+    "fs-extra": "^11.2.0",
     "happy-dom": "^13.6.2",
     "husky": "^9.0.10",
     "jsdom": "~22.1.0",
@@ -45,6 +48,7 @@
     "swc-loader": "0.1.15",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
+    "verdaccio": "^5.0.4",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~2.3.0",
     "vitest": "1.2.2"
@@ -63,5 +67,8 @@
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
