chore: auto generate api docs

--- a/libs/plugins-runtime/tsconfig.lib.json
+++ b/libs/plugins-runtime/tsconfig.lib.json
@@ -2,8 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../dist/out-tsc",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "declaration": true,
     "types": ["node", "vite/client"]
   },
