--- a/libs/plugins-styles/project.json
+++ b/libs/plugins-styles/project.json
@@ -15,8 +15,7 @@
       "dependsOn": ["build"]
     },
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
+      "command": "echo 0"
     }
   },
   "tags": ["type:ui"]
