--- a/libs/plugin-types/package.json
+++ b/libs/plugin-types/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@penpot/plugin-types",
   "version": "0.1.0",
-  "typings": "./index.d.ts"
+  "typings": "./index.d.ts",
+  "type": "module"
 }
