feat: lorem ipsum plugin

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "start:rpc-api": "npx nx serve rpc-api",
     "start:styles-example": "npx nx run example-styles:serve --host 0.0.0.0 --port 4201",
     "start:icons-plugin": "npx nx run-many --targets=buildPlugin,serve --projects=icons-plugin --watch --host 0.0.0.0 --port 4303",
+    "start:loremipsum-plugin": "npx nx run-many --targets=buildPlugin,serve --projects=lorem-ipsum-plugin --watch --port 4304",
     "build": "npx nx build plugins-runtime --emptyOutDir=true",
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
-    "test": "npx nx test plugins-runtime",
+    "test": "nx run-many -t test -p plugins-runtime lorem-ipsum-plugin",
     "publish": "nx run-many -t publish -p plugins-styles plugin-types --parallel=false --",
     "registry": "nx local-registry",
     "prepare": "husky",
