--- a/apps/icons-plugin/project.json
+++ b/apps/icons-plugin/project.json
@@ -4,7 +4,7 @@
   "projectType": "application",
   "prefix": "app",
   "sourceRoot": "apps/icons-plugin/src",
-  "tags": [],
+  "tags": ["type:plugin"],
   "targets": {
     "buildPlugin": {
       "executor": "@nx/esbuild:esbuild",
@@ -65,7 +65,8 @@
           "sourceMap": true
         }
       },
-      "defaultConfiguration": "production"
+      "defaultConfiguration": "production",
+      "dependsOn": ["buildPlugin"]
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
