--- a/apps/icons-plugin/src/assets/manifest.json
+++ b/apps/icons-plugin/src/assets/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Iccons plugin",
+  "name": "Icons plugin",
   "code": "http://localhost:4202/assets/plugin.js",
   "permissions": ["page:read", "file:read", "selection:read"]
 }
