feat: add type checking to plugin api (t#7606)

--- a/libs/plugin-types/project.json
+++ b/libs/plugin-types/project.json
@@ -4,6 +4,9 @@
   "sourceRoot": "libs/plugin-types",
   "projectType": "library",
   "targets": {
+    "lint": {
+      "command": "tsc --noEmit"
+    },
     "build": {
       "command": "node tools/scripts/build-types.mjs",
       "options": {
