--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "typescript": "~5.2.2",
     "verdaccio": "^5.0.4",
     "vite": "^5.0.0",
+    "vite-plugin-checker": "^0.6.4",
     "vite-plugin-dts": "~2.3.0",
     "vitest": "1.2.2"
   },
