--- a/apps/icons-plugin/src/assets/manifest.json
+++ b/apps/icons-plugin/src/assets/manifest.json
@@ -2,9 +2,5 @@
   "name": "Icons plugin",
   "host": "http://localhost:4303",
   "code": "/assets/plugin.js",
-  "permissions": [
-    "page:read",
-    "file:read",
-    "selection:read"
-  ]
+  "permissions": ["page:read", "file:read", "selection:read"]
 }
