--- a/apps/contrast-plugin/project.json
+++ b/apps/contrast-plugin/project.json
@@ -2,7 +2,92 @@
   "name": "contrast-plugin",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
+  "prefix": "app",
   "sourceRoot": "apps/contrast-plugin/src",
   "tags": ["type:plugin"],
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@angular-devkit/build-angular:application",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/apps/contrast-plugin",
+        "index": "apps/contrast-plugin/src/index.html",
+        "browser": "apps/contrast-plugin/src/main.ts",
+        "polyfills": ["zone.js"],
+        "tsConfig": "apps/contrast-plugin/tsconfig.app.json",
+        "assets": [
+          "apps/contrast-plugin/src/favicon.ico",
+          "apps/contrast-plugin/src/assets"
+        ],
+        "styles": [
+          "libs/plugins-styles/src/lib/styles.css",
+          "apps/contrast-plugin/src/styles.css"
+        ],
+        "scripts": [],
+        "optimization": {
+          "scripts": true,
+          "styles": true,
+          "fonts": false
+        }
+      },
+      "configurations": {
+        "production": {
+          "budgets": [
+            {
+              "type": "initial",
+              "maximumWarning": "500kb",
+              "maximumError": "1mb"
+            },
+            {
+              "type": "anyComponentStyle",
+              "maximumWarning": "2kb",
+              "maximumError": "4kb"
+            }
+          ],
+          "outputHashing": "all"
+        },
+        "development": {
+          "optimization": false,
+          "extractLicenses": false,
+          "sourceMap": true
+        }
+      },
+      "defaultConfiguration": "production"
+    },
+    "serve": {
+      "executor": "@angular-devkit/build-angular:dev-server",
+      "configurations": {
+        "production": {
+          "buildTarget": "contrast-plugin:build:production"
+        },
+        "development": {
+          "buildTarget": "contrast-plugin:build:development"
+        }
+      },
+      "defaultConfiguration": "development"
+    },
+    "extract-i18n": {
+      "executor": "@angular-devkit/build-angular:extract-i18n",
+      "options": {
+        "buildTarget": "contrast-plugin:build"
+      }
+    },
+    "buildPlugin": {
+      "executor": "@nx/esbuild:esbuild",
+      "outputs": [
+        "{options.outputPath}"
+      ],
+      "options": {
+        "minify": true,
+        "outputPath": "apps/contrast-plugin/src/assets/",
+        "main": "apps/contrast-plugin/src/plugin.ts",
+        "tsConfig": "apps/contrast-plugin/tsconfig.plugin.json",
+        "generatePackageJson": false,
+        "format": [
+          "esm"
+        ],
+        "deleteOutputPath": false
+      }
+    },
+  }
 }
