feat: add icons to plugins

--- a/apps/contrast-plugin/public/manifest.json
+++ b/apps/contrast-plugin/public/manifest.json
@@ -2,6 +2,7 @@
   "name": "Contrast plugin",
   "host": "http://localhost:4302",
   "code": "/plugin.js",
+  "icon": "/icon.png",
   "permissions": [
     "page:read",
     "file:read",
