--- a/apps/icons-plugin/src/assets/manifest.json
+++ b/apps/icons-plugin/src/assets/manifest.json
@@ -2,5 +2,6 @@
   "name": "Icons plugin",
   "host": "http://localhost:4303",
   "code": "/assets/plugin.js",
+  "icon": "/assets/icon.png",
   "permissions": ["page:read", "file:read", "selection:read"]
 }
