--- a/apps/example-styles/tsconfig.app.json
+++ b/apps/example-styles/tsconfig.app.json
@@ -1,9 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
-    "types": ["node"]
+    "outDir": "../dist/out-tsc",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "declaration": true,
+    "types": ["node", "vite/client"]
   },
-  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["vite.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
