--- a/apps/contrast-plugin/src/assets/manifest.json
+++ b/apps/contrast-plugin/src/assets/manifest.json
@@ -3,5 +3,6 @@
   "host": "http://localhost:4302",
   "description": "Measure contrast plugin",
   "code": "/assets/plugin.js",
+  "icon": "/assets/icon.png",
   "permissions": ["page:read", "file:read", "selection:read"]
 }
