--- a/apps/icons-plugin/src/assets/manifest.json
+++ b/apps/icons-plugin/src/assets/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Icons plugin",
-  "host": "http://localhost:4303",
   "code": "/assets/plugin.js",
   "icon": "/assets/icon.png",
+  "description": "Create icons from the Feather Icons set",
   "permissions": ["page:read", "file:read", "selection:read"]
 }
