--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start:app:runtime": "concurrently --kill-others --names build,server \"npx nx run plugins-runtime:build --watch --mode development\" \"npx nx run plugins-runtime:preview\"",
     "start:app:styles-example": "npx nx run example-styles:serve --host 0.0.0.0 --port 4201",
     "start:plugin:all": "concurrently --kill-others \"npm:start:plugin:*(!all)\"",
-    "start:plugin:poc-state": "npx nx run-many --targets=buildPlugin,serve --projects=poc-state-plugin --watch --host 0.0.0.0 --port 4301",
-    "start:plugin:contrast": "npx nx run-many --targets=buildPlugin,serve --projects=contrast-plugin --watch --host 0.0.0.0 --port 4302",
-    "start:plugin:icons": "npx nx run-many --targets=buildPlugin,serve --projects=icons-plugin --watch --host 0.0.0.0 --port 4303",
-    "start:plugin:loremipsum": "npx nx run-many --targets=buildPlugin,serve --projects=lorem-ipsum-plugin --watch --port 4304",
+    "start:plugin:poc-state": "npx nx run poc-state-plugin:init",
+    "start:plugin:contrast": "npx nx run contrast-plugin:init",
+    "start:plugin:icons": "npx nx run icons-plugin:init",
+    "start:plugin:loremipsum": "npx nx run lorem-ipsum-plugin:init",
     "start:plugin:palette": "npx nx run create-palette-plugin:build --watch & npx nx run create-palette-plugin:preview",
-    "start:plugin:table": "npx nx run-many --targets=buildPlugin,serve --projects=table-plugin --watch --port 4306",
+    "start:plugin:table": "npx nx run table-plugin:init",
     "build": "npx nx build plugins-runtime --emptyOutDir=true",
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
