--- a/apps/lorem-ipsum-plugin/project.json
+++ b/apps/lorem-ipsum-plugin/project.json
@@ -52,7 +52,8 @@
           "sourceMap": true
         }
       },
-      "defaultConfiguration": "production"
+      "defaultConfiguration": "production",
+      "dependsOn": ["buildPlugin"]
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
@@ -61,7 +62,9 @@
           "buildTarget": "lorem-ipsum-plugin:build:production"
         },
         "development": {
-          "buildTarget": "lorem-ipsum-plugin:build:development"
+          "buildTarget": "lorem-ipsum-plugin:build:development",
+          "host": "0.0.0.0",
+          "port": 4304
         }
       },
       "defaultConfiguration": "development"
@@ -88,6 +91,6 @@
         ],
         "deleteOutputPath": false
       }
-    },
+    }
   }
 }
