--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "npx nx build plugins-runtime --emptyOutDir=true",
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
-    "test": "nx run-many -t test -p plugins-runtime lorem-ipsum-plugin",
+    "test": "nx run-many -t test --parallel -p plugins-runtime lorem-ipsum-plugin",
     "publish": "nx run-many -t publish -p plugins-styles plugin-types --parallel=false --",
     "registry": "nx local-registry",
     "prepare": "husky",
@@ -25,40 +25,40 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.3.0",
-    "@angular-devkit/core": "~17.3.0",
-    "@angular-devkit/schematics": "~17.3.0",
-    "@angular-eslint/eslint-plugin": "~17.0.0",
-    "@angular-eslint/eslint-plugin-template": "~17.0.0",
-    "@angular-eslint/template-parser": "~17.0.0",
-    "@angular/cli": "~17.1.0",
-    "@angular/compiler-cli": "~17.3.0",
-    "@angular/language-service": "~17.3.0",
+    "@angular-devkit/build-angular": "18.0.2",
+    "@angular-devkit/core": "18.0.2",
+    "@angular-devkit/schematics": "18.0.2",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "~18.0.0",
+    "@angular/compiler-cli": "18.0.1",
+    "@angular/language-service": "18.0.1",
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@eslint/eslintrc": "^2.1.1",
-    "@fastify/cors": "^9.0.1",
-    "@nx/angular": "^18.0.2",
-    "@nx/esbuild": "18.0.2",
-    "@nx/eslint": "18.0.2",
-    "@nx/eslint-plugin": "18.0.2",
-    "@nx/js": "18.0.2",
-    "@nx/node": "^18.0.2",
-    "@nx/vite": "18.0.2",
-    "@nx/web": "18.0.2",
-    "@schematics/angular": "~17.3.0",
-    "@swc-node/register": "~1.6.7",
+    "@nx/angular": "19.1.1",
+    "@nx/esbuild": "19.1.1",
+    "@nx/eslint": "19.1.1",
+    "@nx/eslint-plugin": "19.1.1",
+    "@nx/js": "19.1.1",
+    "@nx/node": "19.1.1",
+    "@nx/vite": "19.1.1",
+    "@nx/web": "19.1.1",
+    "@schematics/angular": "18.0.2",
+    "@swc-node/register": "1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@types/feather-icons": "^4.29.4",
     "@types/node": "20.11.16",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitest/coverage-v8": "1.2.2",
-    "@vitest/ui": "1.2.2",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
+    "@vitest/coverage-v8": "1.6.0",
+    "@vitest/ui": "1.6.0",
     "concurrently": "^8.2.2",
     "esbuild": "^0.19.2",
-    "eslint": "~8.48.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "fs-extra": "^11.2.0",
@@ -67,39 +67,34 @@
     "husky": "^9.0.10",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "18.0.2",
+    "nx": "19.1.1",
     "prettier": "^2.6.2",
     "swc-loader": "0.1.15",
     "ts-node": "10.9.1",
     "typedoc": "^0.25.13",
-    "typescript": "~5.2.2",
+    "typescript": "~5.4.5",
     "verdaccio": "^5.0.4",
     "vite": "^5.0.0",
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-dts": "~2.3.0",
-    "vitest": "1.2.2"
+    "vitest": "1.6.0"
   },
   "workspaces": [
     "packages/*"
   ],
   "dependencies": {
-    "@angular/animations": "~17.3.0",
-    "@angular/common": "~17.3.0",
-    "@angular/compiler": "~17.3.0",
-    "@angular/core": "~17.3.0",
-    "@angular/forms": "~17.3.0",
-    "@angular/platform-browser": "~17.3.0",
-    "@angular/platform-browser-dynamic": "~17.3.0",
-    "@angular/router": "~17.3.0",
-    "@fastify/autoload": "~5.7.1",
-    "@fastify/sensible": "~5.2.0",
-    "@types/uuid": "^9.0.8",
+    "@angular/animations": "18.0.1",
+    "@angular/common": "18.0.1",
+    "@angular/compiler": "18.0.1",
+    "@angular/core": "18.0.1",
+    "@angular/forms": "18.0.1",
+    "@angular/platform-browser": "18.0.1",
+    "@angular/platform-browser-dynamic": "18.0.1",
+    "@angular/router": "18.0.1",
     "axios": "^1.6.0",
-    "fastify": "~4.13.0",
-    "fastify-plugin": "~4.5.0",
     "feather-icons": "^4.29.2",
     "rxjs": "~7.8.0",
-    "ses": "^1.1.0",
+    "ses": "^1.5.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
