--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm ci
 
       - name: Build the project
-        run: npm run build:styles-example
+        run: npm run build:styles-example -- --base penpot-plugins
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
