feat: init e2e test

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
     "test": "nx run-many -t test --parallel -p plugins-runtime lorem-ipsum-plugin",
+    "test:e2e": "npx nx test e2e",
     "registry": "nx local-registry",
     "prepare": "husky",
     "create:api-docs": "npx typedoc --tsconfig libs/plugins-runtime/tsconfig.lib.json --customCss ./tools/typedoc.css",
@@ -95,6 +96,7 @@
     "@angular/router": "18.0.1",
     "axios": "^1.6.0",
     "feather-icons": "^4.29.2",
+    "puppeteer": "^22.11.0",
     "rxjs": "~7.8.0",
     "ses": "^1.5.0",
     "tslib": "^2.3.0",
