--- a/apps/icons-plugin/src/assets/manifest.json
+++ b/apps/icons-plugin/src/assets/manifest.json
@@ -3,5 +3,8 @@
   "code": "/assets/plugin.js",
   "icon": "/assets/icon.png",
   "description": "Create icons from the Feather Icons set",
-  "permissions": ["page:read", "file:read", "selection:read"]
+  "permissions": [
+    "content:read",
+    "content:write"
+  ]
 }
