--- a/apps/lorem-ipsum-plugin/src/assets/manifest.json
+++ b/apps/lorem-ipsum-plugin/src/assets/manifest.json
@@ -3,5 +3,8 @@
   "description": "Lorem ipsum text generator plugin",
   "code": "/assets/plugin.js",
   "icon": "/assets/icon.png",
-  "permissions": ["page:read", "file:read", "selection:read"]
+  "permissions": [
+    "content:read",
+    "content:write"
+  ]
 }
